--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,14 @@
 server {
-  listen 3000;
-  server_name localhost;
+  listen 8080;
+  root /usr/share/nginx/html;
+  index index.html;
 
   location / {
-    root /usr/share/nginx/html;
-    index index.html;
     try_files $uri $uri/ /index.html;
   }
+
+  location /api {
+    proxy_pass https://api-service.containers.cloud.ru;
+  }
 }
+
