--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,26 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v3
 
+      - name: Fetch all tags
+        run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
+
+      - name: Get latest tag
+        id: latest_tag
+        uses: WyriHaximus/github-action-get-previous-tag@v1
+        with:
+          fallback: "v0.0.0"
+
+      - name: Calculate new tag
+        id: new_tag
+        run: |
+          latest_tag=${{ steps.latest_tag.outputs.tag }}
+          IFS='.' read -ra TAG <<< "$latest_tag"
+          new_minor=$((TAG[2] + 1))
+          echo "new_tag=v${TAG[0]}.${TAG[1]}.$new_minor" >> $GITHUB_ENV
+
+      - name: Create new tag
+        run: git tag $new_tag && git push origin $new_tag
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
@@ -25,7 +45,7 @@ jobs:
       - name: Log in to Docker registry
         uses: docker/login-action@v2
         with:
-          registry: space-football.cr.cloud.ru
+          registry: ${{ secrets.REGISTRY_URL }}
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
@@ -35,8 +55,8 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: space-football.cr.cloud.ru/sfootball_tgapp:${{ steps.get_version.outputs.version }},space-football.cr.cloud.ru/sfootball_tgapp:latest
-          cache-from: type=registry,ref=space-football.cr.cloud.ru/sfootball_tgapp:latest
+          tags: space-football.cr.cloud.ru/sfootball_tgapp:${{ env.new_tag }}
+          cache-from: type=registry,ref=${{ secrets.REGISTRY_URL }}/sfootball_tgapp:latest
           cache-to: type=inline
 
       - name: Cleanup
