--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "vite-plugin-pwa": "^0.19.8",
-    "workbox-window": "^7.0.0"
+    "workbox-window": "^7.0.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@twa-dev/types": "^7.0.0",
