--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ server {
   }
 
   location /api {
-    proxy_pass https://api-service.containers.cloud.ru;
+    proxy_pass https://apiservice.containers.cloud.ru;
   }
 }
 
