--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,8 @@ server {
   }
 
   location /api {
+    proxy_set_header X-Forwarded-For $remote_addr;
+    proxy_set_header Host $http_host;
     proxy_pass https://apiservice.containers.cloud.ru;
   }
 }
