--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "swagger": "node ./config/generate-api.js"
   },
   "dependencies": {
     "@chakra-ui/react": "2.8.1",
@@ -33,6 +34,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.13.4",
     "@twa-dev/types": "^7.0.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
