prepare creating tasks

--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://tgapp.dobromam.ru",
-  "name": "SpaceFootbal",
-  "iconUrl": "https://tgapp.dobromam.ru/logo.jpg"
+  "url": "https://tgapp.containers.cloud.ru",
+  "name": "SFootbal",
+  "iconUrl": "https://tgapp.containers.cloud.ru/logo.png"
 }
