fix vulnarability, manifest

--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
   "url": "https://tgapp.containers.cloud.ru",
-  "name": "SFootbal",
+  "name": "SFootball",
   "iconUrl": "https://tgapp.containers.cloud.ru/logo.png"
 }
