--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.23.1",
+    "usehooks-ts": "^3.1.0",
     "vite-plugin-pwa": "^0.20.0",
     "zustand": "^4.5.2"
   },
